# SopranoTTS-VoiceChat

./: .gitignore  README.md  pyproject.toml
code/: addressee_detector.py  audio_in.py  audio_module.py  latency_tracker.py  llm_module.py  package.json  server.py  soprano_engine.py  speech_pipeline_manager.py  text_context.py  transcribe.py  turndetect.py  upsample_overlap.py
code/resources/: system_prompt_en.txt
code/static/: app.js  index.html  visualizer.js
